// Vitest Snapshot v1

exports[`renders 1`] = `
<button
  class="sc-bcXHqe sc-gswNZR bQFwRY gCUrWJ"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bcXHqe sc-gswNZR hzLSTn gCUrWJ"
>
  foo
</button>
`;
